# ogoh

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/ogoh/: cli.py  config.py  taxonomy.py  worker.py
src/ogoh/bot/: handlers.py  keyboards.py  main.py
src/ogoh/db/: models.py  session.py
src/ogoh/llm/: base.py  gemini.py  prompts.py
src/ogoh/migrations/: env.py
src/ogoh/migrations/versions/: 068f7e8aac7a_baseline_schema.py  57572b3f1f08_add_summary_uz.py  9d4e34ad6463_add_text_complete_and_text_extracted_at.py  bdebf35264f2_add_cluster_research.py  da384ca30b36_add_feedback_table.py
src/ogoh/notify/: telegram.py
src/ogoh/pipeline/: dedupe.py  digest.py  enrich.py  extract.py  ingest.py  match.py  normalize.py  research.py
src/ogoh/sources/: base.py  changelog.py  registry.py  rss.py
tests/: conftest.py  stubs.py  test_dedupe.py  test_digest.py  test_enrich.py  test_extract.py  test_feedback.py  test_handlers.py  test_ingest.py  test_lang.py  test_match.py  test_migrations.py  test_normalize.py  test_research.py  test_worker.py
